--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  
   <meta charset="utf-8">
 
-  <title>Client</title>
+  <title>Weather API</title>
   
   <!-- 120 word description for SEO purposes goes here. Note: Usage of lang tag. -->
   <!-- <meta name="description" lang="en" content=""> -->
@@ -19,7 +19,7 @@
   <!-- This meta tag is used for mobile device to display the page without any zooming,
        so how much the device is able to fit on the screen is what's shown initially. 
        Remove comments from this tag, when you want to apply media queries to the website. -->
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   
   <!-- To adhear no-cache for Chrome -->
 <!--   <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
@@ -53,6 +53,17 @@
     <!--main section start-->
     <main>
 
+      <div class="text-field">
+        <input type="text" id="input">
+        <input type="submit" value="Submit">
+      </div>
+
+      <div class="display">
+        <h2 class="city-name"></h2>
+        <p class="temperature"></p>
+        <p class="description"></p>
+      </div>
+
     </main>
     <!--main section end-->
 
@@ -65,7 +76,7 @@
   </div>
   <!--container end-->
 
-<!-- <script src="js/vendors/jquery-1.8.3.min.js"></script>
-<script src="js/script.js"></script> -->
+<!-- <script src="js/vendors/jquery-1.8.3.min.js"></script> -->
+<script src="assets/js/script.js"></script> 
 </body>
 </html>
