--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <main>
 
       <div class="text-field">
-        <input type="text" id="input">
-        <input type="submit" value="Submit">
+        <input type="text" id="input" placeholder="Enter city name">
+        <input type="submit" value="Submit" id="submit">
       </div>
 
       <div class="display">
